--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -35,7 +35,7 @@
 
     &__item {
         &:hover {
-            color: var(--hover-color);
+            color: var(--allocated-title);
         }
 
         &:active {
