--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -1,6 +1,13 @@
 .about {
-    margin-top: 80px;
+    margin-top: 85px;
+    position: relative;
     background: #5C4EAE;
+
+    svg {
+        position: absolute;
+        top: 0;
+        height: 205px;
+    }
 
     &__list {
         justify-content: space-between;
