--- a/scss/components/_all.scss
+++ b/scss/components/_all.scss
@@ -3,3 +3,6 @@
 @import './header.scss';
 @import './hero.scss';
 @import './about.scss';
+@import './quality.scss';
+@import './restaurant.scss';
+@import './dishes.scss';
