--- a/scss/components/_settings.scss
+++ b/scss/components/_settings.scss
@@ -10,6 +10,8 @@ html {
     --hero-color: #6C5FBC;
     --active-color: #11111149;
     --allocated-title: #6C5FBC;
+    --popup-list: #a69af5;
+    --consumption-line: #FBAD18;
 }
 
 *, *::before, *::after {
