--- a/scss/components/_all.scss
+++ b/scss/components/_all.scss
@@ -7,3 +7,5 @@
 @import './restaurant.scss';
 @import './dishes.scss';
 @import './purchases.scss';
+@import './reviews.scss';
+@import "./subscribe.scss";
