--- a/scss/components/_settings.scss
+++ b/scss/components/_settings.scss
@@ -12,6 +12,7 @@ html {
     --allocated-title: #6C5FBC;
     --popup-list: #a69af5;
     --consumption-line: #FBAD18;
+    --primary-color: #6C5FBC;
 }
 
 *, *::before, *::after {
