--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -13,6 +13,7 @@ html {
     --popup-list: #a69af5;
     --consumption-line: #FBAD18;
     --primary-color: #6C5FBC;
+    --hero-bonus: #6155AE;
 }
 
 *, *::before, *::after {
