--- a/scss/components/_dishes.scss
+++ b/scss/components/_dishes.scss
@@ -1,15 +1,36 @@
 .dishes {
     margin-top: 100px;
     
+    @include big-desktop {
+        margin-top: 72px;
+    }
+    
     .container {
         max-width: 1240px;
         padding-bottom: 120px;
         border-bottom: 1px solid #CBCBCB;
+
+        @include big-desktop {
+            padding-bottom: 85px;
+        }
+    }
+
+    &__skill {
+        @include big-desktop {
+            margin-left: 0px;
+        }
     }
 
     &__title {
         text-align: center;
+        font-weight: 600;
         margin-bottom: 75px;
+
+        @include big-desktop {
+            font-size: 32px;
+            line-height: 18px;
+            margin-bottom: 53px;
+        }
     }
 
     &__content {
@@ -26,6 +47,10 @@
 
         &--bottom {
             padding: 0 10px 0 18px;
+
+            @include big-desktop {
+                padding: 0 19px 0 16px;
+            }
         }
     }
 
@@ -39,14 +64,26 @@
         font-size: 23px;
         line-height: 37px;
         color: #323142;
+
+        @include big-desktop {
+            font-size: 16px;
+            line-height: 26px;
+        }
     }
 
     &__card--characteristic {
+        align-items: center;
         font-weight: 400;
-        font-size: 17.2907px;
+        font-size: 17px;
         line-height: 23px;
         color: #8E97A6;
         margin-bottom: 10px;
+
+        @include big-desktop {
+            font-size: 12px;
+            line-height: 16px;
+            margin-bottom: 9px;
+        }
     }
 
     &__card--add {
@@ -61,21 +98,35 @@
         height: 39px;
         background: #323142;
         border-radius: 8px;
+
+        @include big-desktop {
+            width: 39px;
+            height: 35px;
+        }
     }
 }
 
 .price {
     font-family: 'Manrope';
     font-weight: 700;
-    font-size: 25.936px;
+    font-size: 25px;
     line-height: 40px;
     color: #323142;
     
     span {
         font-family: 'Manrope';
         font-weight: 700;
-        font-size: 18.8058px;
+        font-size: 18px;
         line-height: 40px;
         color: #8E97A6;
+
+        @include big-desktop {
+            font-size: 13px;
+        }
+    }
+
+    @include big-desktop {
+        font-size: 18px;
+        line-height: 28px;
     }
 }
