--- a/scss/components/_purchases.scss
+++ b/scss/components/_purchases.scss
@@ -1,8 +1,17 @@
 .purchases {
     margin-top: 100px;
+
+    @include big-desktop {
+        margin-top: 72px;
+    }
+
     .container {
         padding-bottom: 134px;
         border-bottom: 1px solid #CBCBCB;
+
+        @include big-desktop {
+            padding-bottom: 95px;
+        }
     }
     &__left {
         grid-column: 5 span;
@@ -10,8 +19,16 @@
 
     &__title {
         font-size: 50px;
+        font-weight: 700;
         line-height: 58px;
         color: #18181B;
+        text-transform: capitalize;
+
+        @include big-desktop {
+            width: 390px;
+            font-size: 36px;
+            line-height: 41px;
+        }
     }
 
     &__card {
@@ -27,11 +44,14 @@
             align-items: center;
         }
 
+        @include big-desktop {
+            margin-top: 34px;
+        }
     }
 
     &__card--time {
         font-weight: 500;
-        font-size: 13.0442px;
+        font-size: 13px;
         line-height: 140%;
         color: #ACADB9;
         margin-left: 42px;
@@ -50,6 +70,10 @@
 
         &--inner {
             padding: 45px 37px;
+
+            @include big-desktop {
+                padding: 32px 26px;
+            }
         }
 
         &--header {
@@ -143,13 +167,17 @@
             font-size: 28px;
             line-height: 135%;
             color: #1A202C;
+
+            @include big-desktop {
+                font-size: 20px;
+            }
         }
         &--month__selection {
             padding: 12px 18px;
             background: #FAFAFA;
             border-radius: 12px;
             font-weight: 600;
-            font-size: 18.8471px;
+            font-size: 18px;
             line-height: 150%;
             color: #1A202C;
             align-items: center;
@@ -157,6 +185,11 @@
 
             svg {
                 margin-left: 6px;
+            }
+
+            @include big-desktop {
+                padding: 8px 13px;
+                font-size: 16px;
             }
         }
         &--month__list {
@@ -170,7 +203,7 @@
             font-size: 16px;
             z-index: 99;
             
-            display: none;
+            // display: none;
 
             li:hover {
                 background: var(--popup-list);
@@ -186,16 +219,24 @@
 
     &__top--title {
         font-weight: 800;
-        font-size: 18.8471px;
+        font-size: 18px;
         line-height: 150%;
         color: #1A202C;
+        
+        @include big-desktop {
+            font-size: 16px;
+        }
     }
 
     &__top--increased {
         font-weight: 500;
-        font-size: 15.7059px;
+        font-size: 15px;
         line-height: 150%;
         color: #A0AEC0;
+
+        @include big-desktop {
+            font-size: 13px;
+        }
     }
 
     &__price {
@@ -204,7 +245,15 @@
         font-size: 21px;
         line-height: 150%;
         color: #1A202C;
+
+        @include big-desktop {
+            font-size: 18px;
+        }
     }
+}
+
+.popup__list {
+    display: none;
 }
 
 .active {
