--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,10 +5,13 @@
         font-family: Inner, sans-serif;
         font-size: 17px;
         padding-top: 48px;
-        padding-left: 0;
-        padding-right: 0;
         padding-bottom: 24px;
         border-bottom: 1px solid #CBCBCB;
+
+        @include big-desktop {
+            font-size: 14px;
+            padding-bottom: 17px;
+        }
     }
 }
 
@@ -20,6 +23,10 @@
         font-weight: 600;
         line-height: 27px;
         color: #6C5FBC;
+
+        @include big-desktop {
+            font-size: 15px;
+        }
     }
 }
 
@@ -55,6 +62,12 @@
     font-weight: 700;
     line-height: 26px;
     border-radius: 17px;
+
+    @include big-desktop {
+        font-size: 12px  ;
+        padding: 12px 19px;
+        border-radius: 12px;
+    }
 }
 
 .login {
