--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,8 +1,17 @@
 .hero {
     min-height: 600px;
     margin-top: 30px;
+
+    &__content {
+        justify-content: space-between
+    }
+
     &__content--description {
         padding-top: 80px;
+
+        @include big-desktop {
+            max-width: 400px;
+        }
     }
 
     &__users {
@@ -14,6 +23,11 @@
         align-items: center;
         gap: 20px;
         margin-bottom: 18px;
+
+        @include big-desktop {
+            font-size: 10px;
+            margin-bottom: 12px;
+        }
     }
 
     &__title {
@@ -27,6 +41,11 @@
         &--allocated {
             color: var(--hero-color);
         }
+
+        @include big-desktop {
+            font-size: 53px;
+            margin-bottom: 11px;
+        }
     }
 
     &__description {
@@ -38,6 +57,16 @@
         color: #676767;
         opacity: 0.7;
         margin-bottom: 50px;
+
+        &--bonus {
+            color: var(--hero-color);
+        }
+
+        @include big-desktop {
+            font-size: 12px;
+            line-height: 19px;
+            margin-bottom: 37px;
+        }
     }
 
     &__btn {
@@ -52,12 +81,21 @@
         font-size: 16px;
         line-height: 24px;
         letter-spacing: 0.01em;
+
+        @include big-desktop {
+            font-size: 11px;
+            margin-bottom: 23px;
+        }
     }
 
     &--started {
         padding: 18px 31px 17px 30px;
         background: #6C5FBC;
         color: #fff;
+
+        @include big-desktop {
+            padding: 12px 21px;
+        }
     }
 
     &--pro {
@@ -69,6 +107,10 @@
             background: #6C5FBC;
             color: #fff;
             transition: all 0.3s ease-in-out;
+        }
+
+        @include big-desktop {
+            padding: 12px 19px;
         }
     }
 }
