--- a/scss/components/_quality.scss
+++ b/scss/components/_quality.scss
@@ -13,6 +13,10 @@
     &__right {
         margin-top: 95px;
         grid-column: 8 / 5 span;
+
+        @include big-desktop {
+            grid-column: 9 / 4 span;
+        }
     }
 
     &__title {
@@ -24,6 +28,12 @@
         &--allocated {
             color: #6C5FBC;
         }
+
+        @include big-desktop {
+            font-size: 36px;
+            margin-bottom: 45px;
+            line-height: 41px;
+        }
     }
 
     &__list {
@@ -33,6 +43,12 @@
         color: #676767;
         list-style-type: disc;
         margin-bottom: 27px;
+
+        @include big-desktop {
+            font-size: 14px;
+            line-height: 21px;
+            margin-bottom: 19px;
+        }
     }
 
     &__download--block {
@@ -43,6 +59,11 @@
         .svg {
             position: absolute;
             right: 0;
+
+            @include big-desktop {
+                top: 40px;
+                right: 45px;
+            }
         }
     }
     &__btn {
@@ -57,6 +78,16 @@
         
         svg {
             margin-left: 15px;
+
+            @include big-desktop {
+                margin-right: 10px;
+            }
+        }
+
+        @include big-desktop {
+            padding: 14px 18px 13px;
+            font-size: 12px;
+            line-height: 16px;
         }
     }
 }
