--- a/scss/components/_restaurant.scss
+++ b/scss/components/_restaurant.scss
@@ -1,15 +1,33 @@
 .restaurant {
     margin-top: 100px;
 
+    @include big-desktop {
+        margin-top: 72px;
+    }
+
     .container {
         max-width: 1248px;
         padding-bottom: 120px;
         border-bottom: 1px solid #CBCBCB;
+
+        @include big-desktop {
+            padding-bottom: 85px;
+        }
+    }
+
+    &__content {
+        justify-content: center;
     }
 
     &__title {
         text-align: center;
         margin-bottom: 85px;
+
+        @include big-desktop {
+            font-size: 32px;
+            line-height: 18px;
+            margin-bottom: 60px;
+        }
     }
 
     &__content {
@@ -18,6 +36,10 @@
 
     &__skill {
         margin-left: 32px;
+
+        @include big-desktop {
+            margin-left: 23px;
+        }
     }
 }
 
@@ -25,24 +47,37 @@
     width: 395px;
     padding-bottom: 17px;
     background: #fff;
-    border: 1.25095px solid #F4F4F6;
+    border: 1px solid #F4F4F6;
     box-shadow: 5px 71px 35px rgba(229, 229, 229, 0.7);
     border-radius: 30px;
 
+    @include big-desktop {
+        padding-bottom: 12px;
+    }
+
     &__img {
-        box-shadow: 5.94564px 71.3477px 35.6738px rgba(50, 49, 66, 0.04);
+        box-shadow: 5px 71px 35px rgba(50, 49, 66, 0.04);
     }
 
     &__skill {
         padding: 3px 8px 2px;
         font-weight: 400;
-        font-size: 12.7757px;
+        font-size: 12px;
         line-height: 19px;
         border-radius: 5px;
+
+        @include big-desktop {
+            padding: 2px 6px;
+            font-size: 9px;
+        }
     }
 
     &__bottom {
         padding: 0 26px 0 34px;
+
+        @include big-desktop {
+            padding: 0 19px 0 24px;
+        }
     }
 
     &__name {
@@ -51,11 +86,22 @@
         line-height: 42px;
         color: #323142;
         grid-column: 1 / 11;
+
+        @include big-desktop {
+            font-size: 18px;
+            line-height: 29px;
+        }
     }
 
     &__characteristic {
         align-items: center;
         grid-column: 1 / 7;
+        color: #8E97A6;
+
+        @include big-desktop {
+            font-size: 13px;
+            line-height: 18px;
+        }
     }
 
     &__time {
@@ -98,5 +144,11 @@
 
     svg {
         margin-left: 20px;
+    }
+
+    @include big-desktop {
+        margin-top: 50px;
+        font-size: 16px;
+        line-height: 32px;
     }
 }
