--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    padding: 0 20px;
     &__container {
         align-items: center;
         justify-content: space-between;
@@ -10,6 +11,7 @@
 
         @include big-desktop {
             font-size: 14px;
+            padding-top: 34px;
             padding-bottom: 17px;
         }
     }
@@ -66,6 +68,12 @@
     @include big-desktop {
         font-size: 12px  ;
         padding: 12px 19px;
+        border-radius: 12px;
+    }
+
+    @include tablet {
+        padding: 8px 15px;
+        font-size: 11px;
         border-radius: 12px;
     }
 }
