--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,6 +2,10 @@
     min-height: 600px;
     margin-top: 30px;
 
+    @include tablet {
+        margin-top: 10px;
+    }
+
     &__content {
         justify-content: space-between
     }
